// Copyright (C) 2020 THL A29 Limited, a Tencent company. All rights reserved.
//
// Licensed under the BSD 3-Clause License (the "License"); you may not use this
// file except in compliance with the License. You may obtain a copy of the
// License at
//
// https://opensource.org/licenses/BSD-3-Clause
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.

syntax = "proto3";

package yadcc.patch;

// We use the message to specify which position in compilation result file
// should be replaced and how long it is.
message Location {
  // Where replacement happens.
  uint32 position = 1;
  // Total length to be patched (including suffix).
  uint32 total_size = 2;
  // Size of suffix to be kept.
  uint32 suffix_to_keep = 3;
}

// If more than one path should be replaced, we need this.
message Locations {
  repeated Location locations = 1;
}
